force-app/main/default/objects/Product2/fields/Appexchange_Listing__c.field-meta.xml
<CustomField>
    <fullName>Appexchange_Listing__c</fullName>
    <label>Appexchange Listing</label>
    <type>Url</type>
</CustomField>