force-app/main/default/objects/Product2/fields/Battle_Card__c.field-meta.xml
<CustomField>
    <fullName>Battle_Card__c</fullName>
    <label>Battle Card</label>
    <type>Url</type>
</CustomField>