force-app/main/default/objects/Product2/fields/Bitbucket_Repository__c.field-meta.xml
<CustomField>
    <fullName>Bitbucket_Repository__c</fullName>
    <label>Bitbucket Repository</label>
    <type>Url</type>
</CustomField>