force-app/main/default/objects/Product2/fields/Bolt_Component_List__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Component_List__c</fullName>
    <description>Links to a complete list of all components in each Bolt</description>
    <inlineHelpText>Links to a complete list of all components in each Bolt</inlineHelpText>
    <label>Bolt Component List</label>
    <type>Url</type>
</CustomField>