force-app/main/default/objects/Product2/fields/Child_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Child_Product_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Child Product Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>