force-app/main/default/objects/Product2/fields/External_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>External_Image_URL__c</fullName>
    <description>External Image URL</description>
    <inlineHelpText>Image URL</inlineHelpText>
    <label>External Image URL</label>
    <type>Url</type>
</CustomField>