force-app/main/default/objects/Product2/fields/External_Product_URL__c.field-meta.xml
<CustomField>
    <fullName>External_Product_URL__c</fullName>
    <description>External product URL</description>
    <inlineHelpText>External Product URL linked to the &apos;Add to Cart&apos; button</inlineHelpText>
    <label>External Product URL</label>
    <type>Url</type>
</CustomField>