force-app/main/default/objects/Product2/fields/Featured__c.field-meta.xml
<CustomField>
    <fullName>Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Featured product</description>
    <inlineHelpText>Check to feature this product</inlineHelpText>
    <label>Featured</label>
    <type>Checkbox</type>
</CustomField>