force-app/main/default/objects/Product2/fields/Floor_Price__c.field-meta.xml
<CustomField>
    <fullName>Floor_Price__c</fullName>
    <inlineHelpText>Lowest recommended sale price, per 7Summits Product team.</inlineHelpText>
    <label>Floor Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>