force-app/main/default/objects/Product2/fields/Guide_Formula__c.field-meta.xml
<CustomField>
    <fullName>Guide_Formula__c</fullName>
    <formula>IF(ISBLANK(Setup_Guide__c), &quot;&quot;, HYPERLINK( Setup_Guide__c , &quot;Guide&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guide</label>
    <type>Text</type>
</CustomField>