force-app/main/default/objects/Product2/fields/Launch_Formula__c.field-meta.xml
<CustomField>
    <fullName>Launch_Formula__c</fullName>
    <formula>Launch_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Launch</label>
    <type>Date</type>
</CustomField>