force-app/main/default/objects/Product2/fields/LEX_Formula__c.field-meta.xml
<CustomField>
    <fullName>LEX_Formula__c</fullName>
    <formula>LEX_Compatible__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LEX</label>
    <type>Checkbox</type>
</CustomField>