force-app/main/default/objects/Product2/fields/Marketing_Slides__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Slides__c</fullName>
    <label>Marketing Slides</label>
    <type>Url</type>
</CustomField>