force-app/main/default/objects/Product2/fields/Price_Formula__c.field-meta.xml
<CustomField>
    <fullName>Price_Formula__c</fullName>
    <formula>IF(Price__c &gt; 0, TEXT(Price__c/1000) &amp; &apos;K&apos;, &apos;N/A&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$</label>
    <type>Text</type>
</CustomField>