force-app/main/default/objects/Product2/fields/Product_10__c.field-meta.xml
<CustomField>
    <fullName>Product_10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product #10</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Product #10)</relationshipLabel>
    <relationshipName>Products9</relationshipName>
    <type>Lookup</type>
</CustomField>