force-app/main/default/objects/Product2/fields/Product_2__c.field-meta.xml
<CustomField>
    <fullName>Product_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product #2</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Product #2)</relationshipLabel>
    <relationshipName>Products1</relationshipName>
    <type>Lookup</type>
</CustomField>