force-app/main/default/objects/Product2/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Sequence number</description>
    <inlineHelpText>Featured list display order</inlineHelpText>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>