force-app/main/default/objects/Product2/fields/Setup_Guide__c.field-meta.xml
<CustomField>
    <fullName>Setup_Guide__c</fullName>
    <label>Setup Guide</label>
    <type>Url</type>
</CustomField>