force-app/main/default/objects/Product2/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>The length - in YEARS ONLY - of 7S Product Subscription or Perpetual licenses only; not required for services</description>
    <inlineHelpText>The length - in YEARS ONLY - of 7S Product Subscription or Perpetual licenses only; not required for services</inlineHelpText>
    <label>Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>