force-app/main/default/objects/Product2/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <formula>IF(ISBLANK( Training_Video_URL__c ), &quot;&quot;, HYPERLINK( Training_Video_URL__c , &quot;Training&quot;))</formula>
    <label>Training</label>
    <type>Text</type>
</CustomField>