force-app/main/default/objects/Product2/fields/Training_Video_URL__c.field-meta.xml
<CustomField>
    <fullName>Training_Video_URL__c</fullName>
    <label>Training Video</label>
    <type>Url</type>
</CustomField>