force-app/main/default/objects/Product2/fields/Video_List_7s__c.field-meta.xml
<CustomField>
    <fullName>Video_List_7s__c</fullName>
    <label>Video_List_7s</label>
    <type>TextArea</type>
</CustomField>