force-app/main/default/objects/Product2/listViews/Active_IP_Accelerator_Packs.listView-meta.xml
<ListView>
    <fullName>Active_IP_Accelerator_Packs</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Price_Formula__c</columns>
    <columns>AppX_Formula__c</columns>
    <columns>Slides_Formula__c</columns>
    <columns>Video_Formula__c</columns>
    <columns>Guide_Formula__c</columns>
    <columns>Training__c</columns>
    <columns>Battle_Card_Formula__c</columns>
    <columns>Launch_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Product</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>notContain</operation>
        <value>Extraction</value>
    </filters>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>startsWith</operation>
        <value>Pack</value>
    </filters>
    <label>Active IP: Accelerator Packs</label>
</ListView>