force-app/main/default/objects/Product2/listViews/Active_IP_List_Other_Apps_Components.listView-meta.xml
<ListView>
    <fullName>Active_IP_List_Other_Apps_Components</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Price__c</columns>
    <columns>LEX_Formula__c</columns>
    <columns>Launch_Formula__c</columns>
    <columns>Slides_Formula__c</columns>
    <columns>Guide_Formula__c</columns>
    <columns>Video_Formula__c</columns>
    <columns>AppX_Formula__c</columns>
    <columns>Bitbucket_Formula__c</columns>
    <columns>Battle_Card_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Product</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>startsWith</operation>
        <value>Cmp-</value>
    </filters>
    <label>Active IP List: Other Apps &amp; Components</label>
</ListView>