force-app/main/default/objects/Product2/listViews/Active_Products.listView-meta.xml
<ListView>
    <fullName>Active_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Licensing_Type__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Bundle__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Products</label>
    <language>en_US</language>
</ListView>