force-app/main/default/objects/Product2/listViews/Hive_2_0.listView-meta.xml
<ListView>
    <fullName>Hive_2_0</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Product</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Hive View</label>
</ListView>