force-app/main/default/objects/Product2/listViews/X7S_Products.listView-meta.xml
<ListView>
    <fullName>X7S_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Technology_Platform__c</columns>
    <columns>Licensing_Type__c</columns>
    <columns>PRODUCT2.QTY_SCHEDULE_ENABLED</columns>
    <columns>PRODUCT2.REV_SCHEDULE_ENABLED</columns>
    <columns>Recurring_Revenue__c</columns>
    <filterScope>Everything</filterScope>
    <label>7S Products</label>
    <language>en_US</language>
</ListView>